Layout bug on mobile device

--- a/src/components/layout-components/footer/login-control/LoginControl.module.css
+++ b/src/components/layout-components/footer/login-control/LoginControl.module.css
@@ -1,7 +1,7 @@
 .link {
   display: block;
   font-size: var(--font-size-current-plus);
-  padding: 0.4em 0;
+  padding: 1.2em 0;
 }
 
 @media (--sm) {
