--- a/src/components/layout-components/main/Main.module.css
+++ b/src/components/layout-components/main/Main.module.css
@@ -1,6 +1,6 @@
 .main {
   text-align: center;
-  padding: 140px 0 3em;
+  padding: 140px 1em 3em;
   max-width: var(--max-content-width);
   margin: auto;
 }
