--- a/src/pages/styles/variables.module.css
+++ b/src/pages/styles/variables.module.css
@@ -24,6 +24,7 @@
   --color-xxlight: #fafafa;
   --color-xlight: #f5f5f5;
   --color-light: #e7e4d7;
+  --color-dark: #a1a1a1;
   --color-xdark: #333;
 
   --link-color-dark: #be2d01;
